# dc-gui

./: CMakeLists.txt  README.md  dc-gui.forms.fbp
cmake/: FindwxW.cmake  UsewxW.cmake
dependencies/dccrypto/: CMakeLists.txt
dependencies/dccrypto/include/: crypt_connection.hpp  crypt_ec_helper.hpp  crypt_network_manager.hpp
dependencies/dccrypto/src/: crypt_connection.cpp  crypt_ec_helper.cpp  crypt_network_manager.cpp
dependencies/dcp2p/: CMakeLists.txt
dependencies/dcp2p/include/: p2p_connection.hpp  p2p_host.hpp  p2p_hostmanager.hpp  p2p_listener.hpp  p2p_manager.hpp  p2p_packet.hpp
dependencies/dcp2p/src/: p2p_connection.cpp  p2p_host.cpp  p2p_hostmanager.cpp  p2p_listener.cpp  p2p_manager.cpp  p2p_packet.cpp
dependencies/dcprotocol/: CMakeLists.txt  README.md
deploy/: config.json
deploy/data/private_keys/: readme.txt
src/: DesktopApp.cpp  DesktopApp.h  DesktopForm.cpp  DesktopForm.h  DesktopFormOverriden.cpp  DesktopFormOverriden.h  dc_config.h  dc_gui_app.cpp  dc_gui_app.h  dc_gui_chatpanel.cpp  dc_gui_chatpanel.h  dc_gui_forms.cpp  dc_gui_forms.h  dc_gui_logindialog.cpp  dc_gui_logindialog.h  dc_gui_mainform.cpp  dc_gui_mainform.h  dc_gui_settingsdialog.cpp  dc_gui_settingsdialog.h
src/Win32/: dcgui.rc
